add imprint + basic readme.md

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -70,7 +70,7 @@ const footer = await getEntry("general", "footer");
                 <br/>
                 <br/>
                 <p>Datenschutz</p>
-                <p>Impressum</p>
+                <a href="/impressum">Impressum</a>
             </div>
             <div class="flex-1"></div>
             <div class="flex-1">
