changes discussed in todays call

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -35,8 +35,8 @@ const footer = await getEntry("general", "footer");
                         <a href="/aktuelles">
                             <li>Aktuelles</li>
                         </a>
-                        <a href="/mitmachen">
-                            <li>Mitmachen</li>
+                        <a href="/ihre_hilfe">
+                            <li>Ihre Hilfe</li>
                         </a>
                         <a href="/ueber_uns">
                             <li>Über uns</li>
