--- a/src/components/ArticlePreview.astro
+++ b/src/components/ArticlePreview.astro
@@ -3,7 +3,7 @@ const {slug, title, markdownBody, thumbnail} = Astro.props;
 ---
 <a href={`aktuelles/${slug}`}>
     <div class="pb-16 border-b-2 mb-16">
-        {thumbnail ? (<img class="thumbnail" src={`/${thumbnail}`} alt=""/>) : null}
+        {thumbnail ? (<img class="thumbnail" src={thumbnail} alt=""/>) : null}
         <h2 class="text-2xl py-4">{title}</h2>
         <p class="line-clamp-5">{markdownBody}</p>
     </div>
