--- a/src/pages/ihre_hilfe.astro
+++ b/src/pages/ihre_hilfe.astro
@@ -6,6 +6,7 @@ import Headline from '../components/Headline.astro';
 import TeamAvatar from '../components/TeamAvatar.astro';
 import HeroImage from '../components/HeroImage.astro';
 import Section from '../components/Section.astro';
+import {fromSrc} from "../utils";
 
 const about = await getEntry("pages", "participate");
 const {
@@ -17,7 +18,7 @@ const {
 ---
 
 <Layout>
-    <HeroImage src={about.data.hero}/>
+    <HeroImage src={fromSrc(about.data.hero)}/>
     <Section class="py-16">
         <MarkdownWithHeadline markdown={body_participate} headline={title_participate} />
         <Headline class="py-8">{title_carrier}</Headline>
