--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,7 +19,7 @@ const footer = await getEntry("general", "footer");
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href={meta.data.favicon} />
+		<link rel="icon" type="image/svg+xml" href={fromSrc(meta.data.favicon)} />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title ?? meta.data.title }</title>
 	</head>
